--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <header style="background: #fff; box-shadow: 0 2px 20px rgba(124, 58, 237, 0.10); display: flex; align-items: center; padding: 0.5rem 2.5rem; height: 140px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px; position: sticky; top: 0; z-index: 100;">
         <!-- โลโก้ด้านซ้าย -->
         <div style="height: 130px; width: 130px; min-width: 120px; max-width: 160px; display: flex; align-items: center; justify-content: center; background: transparent; margin-right: 2.5rem;">
-            <img src="image/Aun.png" alt="แบนเนอร์ร้าน" style="height: 130px; width: 130px; max-width: 130px; max-height: 130px; object-fit: contain; display: block; background: transparent;">
+            <img src="Aun.png" alt="แบนเนอร์ร้าน" style="height: 130px; width: 130px; max-width: 130px; max-height: 130px; object-fit: contain; display: block; background: transparent;">
         </div>
         <!-- ชื่อร้านขวาโลโก้ -->
         <div style="font-size: 2.1rem; font-weight: bold; color: #5B3F92; letter-spacing: 1px; text-shadow: 0 2px 8px rgba(91,63,146,0.10); white-space: nowrap; margin-right: 2.5rem;">
@@ -327,11 +327,11 @@
     <!-- Banner Section -->
     <section class="banner-ad">
         <span class="promo-icon promo-icon-left">
-            <img src="image/paperpin.png" alt="โปรโมชั่น" style="height:32px;width:32px;vertical-align:middle;animation: promo-bounce 2.2s infinite alternate;">
+            <img src="paperpin.png" alt="โปรโมชั่น" style="height:32px;width:32px;vertical-align:middle;animation: promo-bounce 2.2s infinite alternate;">
         </span>
         โปรโมชั่นพิเศษ! ซื้อครบ 500 บาท ส่งฟรีทั่วประเทศ &nbsp;|&nbsp; สมัครสมาชิกวันนี้ รับส่วนลดเพิ่ม 10%
         <span class="promo-icon promo-icon-right">
-            <img src="image/paperpin.png" alt="โปรโมชั่น" style="height:32px;width:32px;vertical-align:middle;animation: promo-bounce 2.2s infinite alternate;">
+            <img src="paperpin.png" alt="โปรโมชั่น" style="height:32px;width:32px;vertical-align:middle;animation: promo-bounce 2.2s infinite alternate;">
         </span>
     </section>
 
