--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             </div>
             <!-- แถบป้ายโฆษณา Banner Auto Slide -->
             <div class="ad-banner-scroll" id="adBannerScroll">
-                <img src="image/ad1.jpg" alt="โฆษณา 1" class="ad-banner-img">
+                <img src="ad1.jpg" alt="โฆษณา 1" class="ad-banner-img">
                 <div class="ad-banner-dots"></div>
             </div>
             <button class="scroll-down-btn" id="scrollDownBtn" aria-label="เลื่อนไปยังสินค้าแนะนำ" type="button">
@@ -488,28 +488,28 @@
             <h2 class="section-title">สินค้าแนะนำ</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <div class="product-icon"><img src="image/pg1.png" width="100%"></div>
+                    <div class="product-icon"><img src="pg1.png" width="100%"></div>
                     <h3>ปากกาเจล <br>
                         (Gel Pen)</h3>
                     <p>UNI ปากกา ปากกาเจล Uni-ball</p>
                     <button class="buy-btn" data-url="z3.html">สั่งซื้อ</button>
                 </div>
                 <div class="product-card">
-                    <div class="product-icon"><img src="image/nb1.png" width="100%"></div>
+                    <div class="product-icon"><img src="nb1.png" width="100%"></div>
                     <h3>สมุด <br>
                         (note book)</h3>
                     <p>KAKAO FRIENDS กาเกาเฟรนด์ สมุดริมลวด</p>
                     <button class="buy-btn" data-url="z8.html">สั่งซื้อ</button>
                 </div>
                 <div class="product-card">
-                    <div class="product-icon"><img src="image/pk1.png" width="100%"></div>
+                    <div class="product-icon"><img src="pk1.png" width="100%"></div>
                     <h3>ดินสอกด <br>
                         (Mechanical Pencil)</h3>
                     <p>Rotring Visumax ดินสอกด 0.5 มม.</p>
                     <button class="buy-btn" data-url="z6.html">สั่งซื้อ</button>
                 </div>
                 <div class="product-card" style="grid-column: 2 / span 1;">
-                    <div class="product-icon"><img src="image/pc1.png" width="100%"></div>
+                    <div class="product-icon"><img src="pc1.png" width="100%"></div>
                     <h3>ดินสอไม้ <br>
                         (Wooden Pencil)</h3>
                     <p>Master Art ดินสอดำ ดินสอ 2b ลายไม้</p>
@@ -661,9 +661,9 @@
             const img = banner.querySelector('.ad-banner-img');
             const dotsContainer = banner.querySelector('.ad-banner-dots');
             const images = [
-                {src: 'image/kosa.png', alt: 'โฆษณา 1'},
-                {src: 'image/kosa1.png', alt: 'โฆษณา 2'},
-                {src: 'image/kosa2.png', alt: 'โฆษณา 3'}
+                {src: 'kosa.png', alt: 'โฆษณา 1'},
+                {src: 'kosa1.png', alt: 'โฆษณา 2'},
+                {src: 'kosa2.png', alt: 'โฆษณา 3'}
             ];
             let current = 0;
             let timer = null;
