--- a/products.html
+++ b/products.html
@@ -241,7 +241,7 @@
     <header style="background: #fff; box-shadow: 0 2px 20px rgba(124, 58, 237, 0.10); display: flex; align-items: center; padding: 0.5rem 2.5rem; height: 140px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px; position: sticky; top: 0; z-index: 100;">
         <!-- โลโก้ด้านซ้าย -->
         <div style="height: 130px; width: 130px; min-width: 120px; max-width: 160px; display: flex; align-items: center; justify-content: center; background: transparent; margin-right: 2.5rem;">
-            <img src="image/Aun.png" alt="แบนเนอร์ร้าน" style="height: 130px; width: 130px; max-width: 130px; max-height: 130px; object-fit: contain; display: block; background: transparent;">
+            <img src="Aun.png" alt="แบนเนอร์ร้าน" style="height: 130px; width: 130px; max-width: 130px; max-height: 130px; object-fit: contain; display: block; background: transparent;">
         </div>
         <!-- ชื่อร้านขวาโลโก้ -->
         <div style="font-size: 2.1rem; font-weight: bold; color: #5B3F92; letter-spacing: 1px; text-shadow: 0 2px 8px rgba(91,63,146,0.10); white-space: nowrap; margin-right: 2.5rem;">
@@ -386,7 +386,7 @@
                 <div class="product-list">
                     <!-- ตัวอย่างสินค้า 1 -->
                     <div class="product-card">
-                        <img src="image/p1.png" alt="ปากกา">
+                        <img src="p1.png" alt="ปากกา">
                         <div class="product-title">ปากกาลูกลื่น <br>
                                                     (Ballpoint Pen)</div>
                         <div class="product-price">10 บาท <span class="product-unit">1 ด้าม</span></div>
@@ -394,7 +394,7 @@
                     </div>
                     <!-- ตัวอย่างสินค้า 2 -->
                     <div class="product-card">
-                        <img src="image/pc1.png" alt="ดินสอไม้">
+                        <img src="pc1.png" alt="ดินสอไม้">
                         <div class="product-title">ดินสอไม้ <br>
                                                     (Wooden Pencil)</div>
                         <div class="product-price"> 32 บาท <span class="product-unit">12 แท่ง</span></div>
@@ -402,7 +402,7 @@
                     </div>
                     <!-- ตัวอย่างสินค้า 3 -->
                     <div class="product-card">
-                        <img src="image/pg1.png" alt="ปากกาเจล">
+                        <img src="pg1.png" alt="ปากกาเจล">
                         <div class="product-title">ปากกาเจล <br>
                                                     (Gel Pen)</div>
                         <div class="product-price">38 บาท <span class="product-unit">1 ด้าม</span></div>
@@ -410,7 +410,7 @@
                     </div>
                     <!-- ตัวอย่างสินค้า 4 -->
                     <div class="product-card">
-                        <img src="image/h1.png" alt="ปากกาเน้นข้อความ">
+                        <img src="h1.png" alt="ปากกาเน้นข้อความ">
                         <div class="product-title">ปากกาเน้นข้อความ <br>
                                                     (Highlighter)</div>
                         <div class="product-price">15 บาท <span class="product-unit">1 ด้าม</span></div>
@@ -418,7 +418,7 @@
                     </div>
                     <!-- ตัวอย่างสินค้า 5 -->
                     <div class="product-card">
-                        <img src="image/c1.png" alt="ปากกาเน้นข้อความ">
+                        <img src="c1.png" alt="ปากกาเน้นข้อความ">
                         <div class="product-title">ปากกาลบคำผิด <br>
                                                     (Correction Pen)</div>
                         <div class="product-price">12 บาท <span class="product-unit">1 แท่ง</span></div>
@@ -426,7 +426,7 @@
                     </div>
                     <!-- ตัวอย่างสินค้า 6 -->
                     <div class="product-card">
-                        <img src="image/pk1.png" alt="สมุดโน้ต">
+                        <img src="pk1.png" alt="สมุดโน้ต">
                         <div class="product-title">ดินสอกด <br>
                                                     (Mechanical Pencil)</div>
                         <div class="product-price">75 บาท <span class="product-unit">1 แท่ง</span></div>
@@ -434,7 +434,7 @@
                     </div>
                     <!-- ตัวอย่างสินค้า 7 -->
                     <div class="product-card">
-                        <img src="image/f1.png" alt="กรรไกร">
+                        <img src="f1.png" alt="กรรไกร">
                         <div class="product-title">แฟ้มเอกสาร <br>
                                                     (Document Folder)</div>
                         <div class="product-price"> 64 บาท <span class="product-unit">1 เล่ม</span></div>
@@ -442,7 +442,7 @@
                     </div>
                     <!-- ตัวอย่างสินค้า 8 -->
                     <div class="product-card">
-                        <img src="image/nb1.png" alt="กาวน้ำ">
+                        <img src="nb1.png" alt="กาวน้ำ">
                         <div class="product-title">สมุด <br>
                                                     (note book)</div>
                         <div class="product-price">59 บาท <span class="product-unit">1 เล่ม</span></div>
@@ -450,7 +450,7 @@
                     </div>
                     <!-- ตัวอย่างสินค้า 9 -->
                     <div class="product-card">
-                        <img src="image/cl1.png" alt="เทปใส">
+                        <img src="cl1.png" alt="เทปใส">
                         <div class="product-title">คลิปหนีบกระดาษ <br>
                                                         (Paper Clips)</div>
                         <div class="product-price">14 บาท <span class="product-unit">1 กล่อง</span></div>
@@ -458,7 +458,7 @@
                     </div>
                     <!-- ตัวอย่างสินค้า 10 -->
                     <div class="product-card">
-                        <img src="image/pi1.png" alt="แฟ้มเอกสาร">
+                        <img src="pi1.png" alt="แฟ้มเอกสาร">
                         <div class="product-title">กระดาษโน้ตกาว <br>
                                                         (Post-it)</div>
                         <div class="product-price">19 บาท <span class="product-unit">1 ชิ้น</span></div>
@@ -466,7 +466,7 @@
                     </div>
                     <!-- ตัวอย่างสินค้า 11 -->
                     <div class="product-card">
-                        <img src="image/pa1.png" alt="แฟ้มเอกสาร">
+                        <img src="pa1.png" alt="แฟ้มเอกสาร">
                         <div class="product-title">กระดาษ A4 <br>
                                                         (A4 Paper) </div>
                         <div class="product-price">177 บาท <span class="product-unit">1 รีม</span></div>
@@ -474,7 +474,7 @@
                     </div>
                     <!-- ตัวอย่างสินค้า 12 -->
                     <div class="product-card">
-                        <img src="image/b1.png" alt="แฟ้มเอกสาร">
+                        <img src="b1.png" alt="แฟ้มเอกสาร">
                         <div class="product-title">แผ่นรองเขียน <br>
                                                         (Clipboard)</div>
                         <div class="product-price">44 บาท <span class="product-unit">1 ชิ้น</span></div>
