--- a/contact.html
+++ b/contact.html
@@ -303,7 +303,7 @@
     <header style="background: #fff; box-shadow: 0 2px 20px rgba(124, 58, 237, 0.10); display: flex; align-items: center; padding: 0.5rem 2.5rem; height: 140px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px; position: sticky; top: 0; z-index: 100;">
         <!-- โลโก้ด้านซ้าย -->
         <div style="height: 130px; width: 130px; min-width: 120px; max-width: 160px; display: flex; align-items: center; justify-content: center; background: transparent; margin-right: 2.5rem;">
-            <img src="image/Aun.png" alt="แบนเนอร์ร้าน" style="height: 130px; width: 130px; max-width: 130px; max-height: 130px; object-fit: contain; display: block; background: transparent;">
+            <img src="Aun.png" alt="แบนเนอร์ร้าน" style="height: 130px; width: 130px; max-width: 130px; max-height: 130px; object-fit: contain; display: block; background: transparent;">
         </div>
         <!-- ชื่อร้านขวาโลโก้ -->
         <div style="font-size: 2.1rem; font-weight: bold; color: #5B3F92; letter-spacing: 1px; text-shadow: 0 2px 8px rgba(91,63,146,0.10); white-space: nowrap; margin-right: 2.5rem;">
@@ -346,7 +346,7 @@
         </section>
         <!-- กล่องสำหรับรูปแมพยาวๆ -->
         <section class="contact-section" style="max-width: 1200px; margin: 0 auto 2.5rem auto; background: #fff; border-radius: 18px; box-shadow: 0 4px 24px rgba(124,58,237,0.10); padding: 1.2rem 1.2rem 1.2rem 1.2rem; border: 1.5px solid #ede9fe; display: flex; align-items: center; justify-content: center; min-height: 120px; height: 180px;">
-            <img src="image/map.png" alt="แผนที่ร้าน Aunchan" style="width: 100%; max-width: 1100px; height: 100px; object-fit: cover; display: block; border-radius: 12px; box-shadow: 0 2px 12px rgba(124,58,237,0.10); background: #f6f3fd;" />
+            <img src="map.png" alt="แผนที่ร้าน Aunchan" style="width: 100%; max-width: 1100px; height: 100px; object-fit: cover; display: block; border-radius: 12px; box-shadow: 0 2px 12px rgba(124,58,237,0.10); background: #f6f3fd;" />
         </section>
     </main>
 
