--- a/z3.html
+++ b/z3.html
@@ -241,7 +241,7 @@
     <header style="background: #fff; box-shadow: 0 2px 20px rgba(124, 58, 237, 0.10); display: flex; align-items: center; padding: 0.5rem 2.5rem; height: 140px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px; position: sticky; top: 0; z-index: 100;">
         <!-- โลโก้ด้านซ้าย -->
         <div style="height: 130px; width: 130px; min-width: 120px; max-width: 160px; display: flex; align-items: center; justify-content: center; background: transparent; margin-right: 2.5rem;">
-            <img src="image/Aun.png" alt="แบนเนอร์ร้าน" style="height: 130px; width: 130px; max-width: 130px; max-height: 130px; object-fit: contain; display: block; background: transparent;">
+            <img src="Aun.png" alt="แบนเนอร์ร้าน" style="height: 130px; width: 130px; max-width: 130px; max-height: 130px; object-fit: contain; display: block; background: transparent;">
         </div>
         <!-- ชื่อร้านขวาโลโก้ -->
         <div style="font-size: 2.1rem; font-weight: bold; color: #5B3F92; letter-spacing: 1px; text-shadow: 0 2px 8px rgba(91,63,146,0.10); white-space: nowrap; margin-right: 2.5rem;">
@@ -266,15 +266,15 @@
                 <div class="product-detail-card" style="max-width: 900px; margin: 2.5rem auto 2.5rem auto; background: #fff; border-radius: 18px; box-shadow: 0 4px 24px rgba(124,58,237,0.13); padding: 2.5rem 2.2rem 2rem 2.2rem; border: 1.5px solid #ede9fe; display: flex; flex-direction: row; align-items: flex-start; gap: 2.5rem;">
                     <div class="product-slider" style="width: 260px; flex-shrink: 0; display: flex; flex-direction: column; align-items: center;">
                         <div class="slider-img-wrapper" style="width: 210px; height: 210px; position: relative;">
-                            <img id="slider-main-img" src="image/pen1.png" alt="ปากกาเจล GRIP X5" style="width: 210px; height: 210px; object-fit: contain; border-radius: 16px; background: #f6f3fd; box-shadow: 0 2px 12px rgba(124,58,237,0.10); cursor: zoom-in;">
+                            <img id="slider-main-img" src="pg1.png" alt="ปากกาเจล GRIP X5" style="width: 210px; height: 210px; object-fit: contain; border-radius: 16px; background: #f6f3fd; box-shadow: 0 2px 12px rgba(124,58,237,0.10); cursor: zoom-in;">
 
                         </div>
                         <div class="slider-thumbs" style="display: flex; gap: 10px; margin-top: 1.1rem;">
-                            <img src="image/pg1.png" alt="ปากกาเจล GRIP X5" class="slider-thumb active" style="width: 48px; height: 48px; object-fit: contain; border-radius: 8px; background: #f6f3fd; box-shadow: 0 1px 4px rgba(124,58,237,0.10); border: 2.5px solid #a259e6; cursor: pointer;">
-                            <img src="image/pg2.png" alt="ปากกาเจล GRIP X5 มุมอื่น" class="slider-thumb" style="width: 48px; height: 48px; object-fit: contain; border-radius: 8px; background: #f6f3fd; box-shadow: 0 1px 4px rgba(124,58,237,0.10); border: 2.5px solid #ede9fe; cursor: pointer;">
-                            <img src="image/pg3.png" alt="ปากกาเจล GRIP X5 มุมอื่น" class="slider-thumb" style="width: 48px; height: 48px; object-fit: contain; border-radius: 8px; background: #f6f3fd; box-shadow: 0 1px 4px rgba(124,58,237,0.10); border: 2.5px solid #ede9fe; cursor: pointer;">
-                            <img src="image/pg4.png" alt="ปากกาเจล GRIP X5 มุมอื่น" class="slider-thumb" style="width: 48px; height: 48px; object-fit: contain; border-radius: 8px; background: #f6f3fd; box-shadow: 0 1px 4px rgba(124,58,237,0.10); border: 2.5px solid #ede9fe; cursor: pointer;">
-                            <img src="image/pg5.png" alt="ปากกาเจล GRIP X5 มุมอื่น" class="slider-thumb" style="width: 48px; height: 48px; object-fit: contain; border-radius: 8px; background: #f6f3fd; box-shadow: 0 1px 4px rgba(124,58,237,0.10); border: 2.5px solid #ede9fe; cursor: pointer;">
+                            <img src="pg1.png" alt="ปากกาเจล GRIP X5" class="slider-thumb active" style="width: 48px; height: 48px; object-fit: contain; border-radius: 8px; background: #f6f3fd; box-shadow: 0 1px 4px rgba(124,58,237,0.10); border: 2.5px solid #a259e6; cursor: pointer;">
+                            <img src="pg2.png" alt="ปากกาเจล GRIP X5 มุมอื่น" class="slider-thumb" style="width: 48px; height: 48px; object-fit: contain; border-radius: 8px; background: #f6f3fd; box-shadow: 0 1px 4px rgba(124,58,237,0.10); border: 2.5px solid #ede9fe; cursor: pointer;">
+                            <img src="pg3.png" alt="ปากกาเจล GRIP X5 มุมอื่น" class="slider-thumb" style="width: 48px; height: 48px; object-fit: contain; border-radius: 8px; background: #f6f3fd; box-shadow: 0 1px 4px rgba(124,58,237,0.10); border: 2.5px solid #ede9fe; cursor: pointer;">
+                            <img src="pg4.png" alt="ปากกาเจล GRIP X5 มุมอื่น" class="slider-thumb" style="width: 48px; height: 48px; object-fit: contain; border-radius: 8px; background: #f6f3fd; box-shadow: 0 1px 4px rgba(124,58,237,0.10); border: 2.5px solid #ede9fe; cursor: pointer;">
+                            <img src="pg5.png" alt="ปากกาเจล GRIP X5 มุมอื่น" class="slider-thumb" style="width: 48px; height: 48px; object-fit: contain; border-radius: 8px; background: #f6f3fd; box-shadow: 0 1px 4px rgba(124,58,237,0.10); border: 2.5px solid #ede9fe; cursor: pointer;">
                         </div>
                     </div>
                     <div style="flex:1; display: flex; flex-direction: column; align-items: flex-start; justify-content: center;">
